--- a/ContainerBased/packages.config
+++ b/ContainerBased/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autofac" version="2.6.1.841" />
   <package id="Autofac.Mvc3" version="2.6.1.841" />
+  <package id="Autofac.Wcf" version="2.6.1.841" />
 </packages>
