--- a/WcfService/WcfService.csproj
+++ b/WcfService/WcfService.csproj
@@ -67,7 +67,9 @@
   <ItemGroup>
     <Content Include="DataService.svc" />
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
